# whisper-typer-tool

./: .gitignore  CLAUDE.md  README.md  app.py  audio.py  benchmark.py  pyproject.toml  requirements.txt  run_tests.py  stt-server.sh  stt-toggle.sh  test_server_mode.py  test_text_typing.py  text_typing.py  transcription.py  whisper-typer-server.py  whisper-typer-tool.py
