[project]
name = "whisper-typer-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "setuptools-rust>=1.12.0",
    "webrtcvad",
    "numpy",
    "librosa",
    "soundfile",
]

